# django-geo-spaas-rest-api

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  catalog.json  pyproject.toml  runtests.py  setup.py  vocabularies.json
.github/workflows/: ci.yml  tests_and_build.yml
geospaas_rest_api/: apps.py  filters.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
geospaas_rest_api/base_api/: filters.py  serializers.py  views.py
geospaas_rest_api/fixtures/: processing_tests_data.json  read_only_tests_data.json  tasks.json
geospaas_rest_api/migrations/: 0001_initial.py  0002_auto_20201019_1331.py  0003_auto_20220922_1205.py  0004_auto_20230315_1450.py  0005_alter_job_task_id.py  0006_syntoolcomparejob.py  0007_workdircleanupjob.py
geospaas_rest_api/models/: __init__.py  base.py  processing_jobs.py
geospaas_rest_api/processing_api/: filters.py  models.py  serializers.py  views.py
geospaas_rest_api/templates/geospaas_rest_api/: search.html
geospaas_rest_api/tests/: settings.py  test_apps.py  test_base_api.py  test_jobs.py  test_processing.py  test_processing_api.py  test_read_only_api.py  test_tasks.py  urls.py
geospaas_rest_api/v1/: apps.py  pagination.py  runtests.py  serializers.py  urls.py  views.py
geospaas_rest_api/v1/tests/: settings.py  test_apps.py  test_processing.py  test_read_only_api.py  urls.py
tests/: settings.py  urls.py
